Consertando erros no insert e delete de matriz item/lecionas e o erro da criacao de avaliacoes com a nota bimestral

--- a/gestaoEscolar/templates/gestaoEscolar/serie/matriz_item_form.html
+++ b/gestaoEscolar/templates/gestaoEscolar/serie/matriz_item_form.html
@@ -48,7 +48,7 @@
                     <label for="id_Disciplina">Disciplina:</label> 
                     <select name="Disciplina" id="id_Disciplina" >
                         {% for disciplina in disciplinas %}
-                            {% if matriz_item_dados.Disciplina == disciplina.id %}
+                            {% if matriz_item_dados.Disciplina.id == disciplina.id %}
                                 <option value="{{ disciplina.id }}" selected>{{ disciplina.Nome }}</option>
                             {% else %}
                                 <option value="{{ disciplina.id }}" >{{ disciplina.Nome }}</option>
@@ -70,7 +70,7 @@
                     <label for="id_Disciplina">Disciplina:</label> 
                     <select name="Disciplina" id="id_Disciplina" disabled>
                         {% for disciplina in disciplinas %}
-                            {% if matriz_item_dados.Disciplina == disciplina.id %}
+                            {% if matriz_item_dados.Disciplina.id == disciplina.id %}
                                 <option value="{{ disciplina.id }}" selected>{{ disciplina.Nome }}</option>
                             {% else %}
                                 <option value="{{ disciplina.id }}" >{{ disciplina.Nome }}</option>
@@ -90,7 +90,7 @@
 
         {% if Tipo_Transacao == 'INS' or Tipo_Transacao == 'UPD' %}
             <button type="submit">Salvar</button>
-        {% elif Tipo_Transacao == 'DEL' %}
+        {% elif Tipo_Transacao == 'DEL' and bloqueio == False %}
             <button type="submit">Deletar</button>
         {% endif %}
 
