Conclusao do cadastro de avaliacoes, correcoes nos calculos das medias bimestrais e finais, e criacao da rotina completa de fechamento de notas

--- a/gestaoEscolar/templates/gestaoEscolar/avaliacao/avaliacao_form.html
+++ b/gestaoEscolar/templates/gestaoEscolar/avaliacao/avaliacao_form.html
@@ -105,7 +105,7 @@
             <fieldset>
                 <div>
                     <label for="id_Nome">Nome:</label>
-                    <input type="text" name="Nome" maxlength="20" size="20" disabled id="id_Nome" value='{{ avaliacao_dados.Tema }}'>
+                    <input type="text" name="Nome" maxlength="20" size="20" disabled id="id_Nome" value='{{ avaliacao_dados.Nome }}'>
                 </div>
 
                 <div>
