--- a/gestaoEscolar/templates/gestaoEscolar/aula/aula_listagem.html
+++ b/gestaoEscolar/templates/gestaoEscolar/aula/aula_listagem.html
@@ -51,5 +51,5 @@
             {% endfor %}           
         </tbody>
     </table>
-    <a href="{% url 'turma_listagem' %}"> Voltar</a>
+    <a href="{% url 'gerenciamento_turma_listagem' turma.id %}"> Voltar</a>
 {% endblock  %}
