--- a/gestaoEscolar/templates/gestaoEscolar/ano/ano_form.html
+++ b/gestaoEscolar/templates/gestaoEscolar/ano/ano_form.html
@@ -143,7 +143,7 @@
 
         {% if Tipo_Transacao == 'INS' or Tipo_Transacao == 'UPD' %}
             <button type="submit">Salvar</button>
-        {% elif Tipo_Transacao == 'DEL' %}
+        {% elif Tipo_Transacao == 'DEL' and bloqueio ==  False %}
             <button type="submit">Deletar</button>
         {% endif %}
 
