--- a/templates/projeto/base/base.html
+++ b/templates/projeto/base/base.html
@@ -16,6 +16,7 @@
             <a href="{% url 'diretor_alterar' request.session.Pessoa %}">Diretor Alterar</a>
             <a href="{% url 'trocar_senha' request.session.Pessoa %}">Senha Alterar</a>
             <a href="{% url 'escola_novo' %}">Escola Novo</a>
+            <a href="{% url 'escola_alterar' request.session.Escola %}">Escola Alterar</a>
             <a href="{% url 'secretario_listagem' %}">Secretário</a>
             <a href="{% url 'professor_listagem' %}">Professor</a>
             <a href="{% url 'aluno_listagem' %}">Aluno</a>
